src/objects/Survey2__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Customer Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Benchmarking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Survey2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Survey Master</label>
        <referenceTo>Survey2__c</referenceTo>
        <relationshipLabel>Survey Masters</relationshipLabel>
        <relationshipName>Previous_Surveys2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_URL__c</fullName>
        <label>Survey URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>isActive__c</columns>
        <columns>Survey_URL__c</columns>
        <columns>Type__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Survey Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Masters</pluralLabel>
    <recordTypes>
        <fullName>Voice_of_the_Employee</fullName>
        <active>true</active>
        <description>Voice of the Employee Surveys</description>
        <label>Voice of the Employee</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>